# mole_public

./: Dockerfile  README.md  setup.cfg  setup.py  tox.ini
data/: TDC_HIA_Hou_test.parquet  TDC_HIA_Hou_train_seed0.parquet  TDC_HIA_Hou_valid_seed0.parquet  TDC_Half_Life_Obach_test.parquet  TDC_Half_Life_Obach_train_seed0.parquet  TDC_Half_Life_Obach_valid_seed0.parquet
mole/: __init__.py
mole/cli/: mole_predict.py  mole_train.py
mole/training/configs/: base_config.yaml
mole/training/configs/deberta_config/: base.yaml
mole/training/configs/model/: finetune.yaml
mole/training/data/: data_modules.py  datasets.py  utils.py
mole/training/models/: __init__.py  base.py  encoder.py  mole.py
mole/training/models/utils/: masks.py
mole/training/nn/: bert.py  disentangled_attention.py
mole/training/utils/: metrics.py  schedulers.py
requirements/: dev.in  dev_3.10.txt  dev_3.9.txt  main.in  main_3.10.txt  main_3.10_gpu.txt  main_3.9.txt  main_3.9_gpu.txt
