[metadata]
name = mole
description = Recursion foundation model for chemistry based on transformers
url = https://github.com/recursionpharma/mole_public
author = Recursion Pharmaceuticals
author_email = devs@recursionpharma.com
classifiers =
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
keywords = 'mole'

[options]
python_requires = >=3.9
install_requires =
    deberta @ git+https://github.com/omendezlucio/DeBERTa.git
    hydra-core>=1.2.0
    lightning-fabric
    numcodecs
    numexpr
    numpy<2
    omegaconf
    onnx
    onnxruntime
    pyarrow
    pytorch-lightning>=2.1
    PyTDC
    rdkit-pypi
    tensorboardX
    torch  # must be installed before torch-scatter
    torch-geometric
    wandb

[options.entry_points]
console_scripts =
    mole_predict=mole.cli.mole_predict:main
    mole_train = mole.cli.mole_train:main

[options.package_data]
# If any package or subpackage contains *.pkl, *.yaml or *.json files, include them:
* = *.pkl, *.json, *.yaml

[flake8]
max-line-length = 120
exclude = venv,.ipynb_checkpoints
max_complexity = 60

[mypy]
python_version = 3.9
ignore_missing_imports = True
exclude = (requirements|venv)
show_error_codes = True
files = mole
strict = False
implicit_reexport = True
allow_redefinition = True

[mypy-tests.*]
allow_untyped_defs = True
allow_incomplete_defs = True

[mypy-azure.storage.blob.*]
follow_imports = skip

[tool:pytest]
addopts =
        -v
        -x
        --color=yes

testpaths =
	tests

[bdist_wheel]
universal=1

[yapf]
column_limit = 120
based_on_style = google
allow_multiline_dictionary_keys = True
allow_split_before_dict_value = False
blank_line_before_nested_class_or_def = False
coalesce_brackets = True
split_before_named_assigns = False

[isort]
profile = google
py_version = auto
line_length = 120
